issue: h2 style was too big for mobile views. * adjusted and made smaller *

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -86,7 +86,7 @@
 
 .bio-section-header {
   font-weight: bold;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px solid #e4e4e4;
